# weathersite

./: DataLogger.py  README.md  apache_web_site_aws.txt  callbacks.py  control.py  data.py  main.py  precip_test.py  project.py  project.wsgi  pyproject.toml  rest.py  rest_orig.py  settings.py  update_dns.sh  updatedns.service  utils.py  view.py  viewclasses.py  weathersite.exampledomain.org.conf  worker.py
assets/: nice_radio.css
tests/: forecast_test.py  testDataLoggerProcess.py  testPrecip.py  test_utils.py
