[project]
name = "weathersite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "jedi-language-server>=0.46.0",
    "pandas>=2.3.3",
    "portalocker>=3.2.0",
]
