[project]
name = "weathersite"
version = "0.1.0"
description = "Web endpoint for data loggers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "datalogger",
    "jedi-language-server>=0.46.0",
    "pandas>=2.3.3",
    "portalocker>=3.2.0",
]

[tool.uv.sources]
datalogger = { git = "https://github.com/jmoonware/DataLogger" }
